responsive mejorado pag antropometrias

--- a/antropometrias.html
+++ b/antropometrias.html
@@ -50,8 +50,8 @@
     <main class="container-fluid">
         <h1 class="tituloAntropometria"> Antropometrías</h1>
         <section class="row d-flex justify-content-evenly antroFotoIzquierda">
-            <img class="col-12 col-lg-6 img-fluid fotoAntro" loading="lazy" src="Imagenes/Foto-1-antro.jpg" alt="Foto principal de la pagina de antropometrias">
-            <p class="col-12 col-lg-6 textosAntro">La antropometría consiste en una serie de mediciones a partir de la cual podemos conocer con más especificidad, como es la composición corporal de cada individuo. <br> Esta herramienta es un excelente complemento a la balanza ya que nos permite saber realmente de que está conformado nuestro peso. <br>Gracias a la antropometría vamos a conocer dos variables: <strong> Las modificables </strong> (Con una buena alimentación y entrenamiento): MASA MUSCULAR y MASA GRASA y <strong>las no modificables: </strong> MASA OSEA (esqueleto), PIEL y MASA RESIDUAL (Órganos y vísceras)
+            <img class="col-12 col-xl-6 img-fluid fotoAntro" loading="lazy" src="Imagenes/Foto-1-antro.jpg" alt="Foto principal de la pagina de antropometrias">
+            <p class="col-12 col-xl-6 textosAntro">La antropometría consiste en una serie de mediciones a partir de la cual podemos conocer con más especificidad, como es la composición corporal de cada individuo. <br> Esta herramienta es un excelente complemento a la balanza ya que nos permite saber realmente de que está conformado nuestro peso. <br>Gracias a la antropometría vamos a conocer dos variables: <strong> Las modificables </strong> (Con una buena alimentación y entrenamiento): MASA MUSCULAR y MASA GRASA y <strong>las no modificables: </strong> MASA OSEA (esqueleto), PIEL y MASA RESIDUAL (Órganos y vísceras)
                 </p>    
         </section>
 
@@ -60,8 +60,8 @@
         <section>
             <h2 class="titulos">Determinacion de masa adiposa</h2>
             <div class="row d-flex justify-content-evenly antroFotoADerecha">
-                <img class="col-12 col-lg-6 img-fluid fotoGrasa" loading="lazy" src="Imagenes/antro-index.jpg" alt="Imagen de la masa grasa determinada a traves de la antropometria">
-                <p class="col-12 col-lg-6 textosAntro"> La masa adiposa se determina a partir de los pliegues grasos. Los mismos se pueden evaluar individualmente o utilizar como parametro la SUMATORIA DE 6 PLIEGUES (Triceps, Sub-escapular, Supraespinal, Abdominal, Muslo y Pantorilla): Un índice excelente para analizar como esta nuestro tejido adiposo actualmente y para ver los progresos a lo largo del tiempo.</p>
+                <img class="col-12 col-xl-6 img-fluid fotoGrasa" loading="lazy" src="Imagenes/antro-index.jpg" alt="Imagen de la masa grasa determinada a traves de la antropometria">
+                <p class="col-12 col-xl-6 textosAntro"> La masa adiposa se determina a partir de los pliegues grasos. Los mismos se pueden evaluar individualmente o utilizar como parametro la SUMATORIA DE 6 PLIEGUES (Triceps, Sub-escapular, Supraespinal, Abdominal, Muslo y Pantorilla): Un índice excelente para analizar como esta nuestro tejido adiposo actualmente y para ver los progresos a lo largo del tiempo.</p>
             </div>
         </section>
 
@@ -71,8 +71,8 @@
         <section>
             <h2 class="titulos tituloMasaMuscular">Determinacion de masa muscular</h2>
             <div class="row d-flex justify-content-evenly antroFotoIzquierda">
-                <img class="col-12 col-lg-6 img-fluid fotoMusculo" loading="lazy" src="Imagenes/Pag-antro.jpg" alt="Imagen de la masa muscular determinada a traves de la antropometria">
-                <p class="col-12 col-lg-6 textosAntro textoMasaMuscular"> La masa muscular es un elemento fundamental de la composición corporal y de la salud de todas las personas, tanto hombres como mujeres, niños y ancianos. <br>Si bien el entrenamiento de fuerza es fundamental para aumentar los niveles de masa magra, también es muy importante saber acompañar esta actividad física con el correcto balance energético y de macro/micronutrientes. Estos deben ser dos pilares infaltables en la vida de cada uno de nosotros. </p>
+                <img class="col-12 col-xl-6 img-fluid fotoMusculo" loading="lazy" src="Imagenes/Pag-antro.jpg" alt="Imagen de la masa muscular determinada a traves de la antropometria">
+                <p class="col-12 col-xl-6 textosAntro textoMasaMuscular"> La masa muscular es un elemento fundamental de la composición corporal y de la salud de todas las personas, tanto hombres como mujeres, niños y ancianos. <br>Si bien el entrenamiento de fuerza es fundamental para aumentar los niveles de masa magra, también es muy importante saber acompañar esta actividad física con el correcto balance energético y de macro/micronutrientes. Estos deben ser dos pilares infaltables en la vida de cada uno de nosotros. </p>
             </div>
         </section> 
 
@@ -149,7 +149,7 @@
         <h4 class="titulos">Otros Servicios:</h4>
         <section class="container-fluid otrosServicios">
             <div class="row otrosServiciosCaja">
-                <div class="col-12 col-lg-6 d-flex justify-content-center">
+                <div class="col-12 col-md-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="planes-de-alimentación.html">
                             <img src="Imagenes/Planes-de-alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación" class="imgServicios">
@@ -160,7 +160,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 d-flex justify-content-center">
+                <div class="col-12 col-md-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="talleres-de-alimentación.html">
                             <img src="Imagenes/Foto-taller-de-alimentacion.jpeg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
