Mejore responsive talleres de alimentacion

--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -51,7 +51,7 @@
     <main>
         <h1 class="tituloTalleres"> Talleres de alimentación</h1>
         <section class="row d-flex justify-content-evenly talleresFotoIzquierda">
-            <img class="col-12 col-lg-6 img-fluid imgTalleres1" src="Imagenes/Foto-taller-de-alimentacion.jpeg" loading="lazy" alt="Taller de alimentación realizado presencial en el jardin agronomitos">
+            <img class="col-12 col-xl-6 img-fluid imgTalleres1" src="Imagenes/Foto-taller-de-alimentacion.jpeg" loading="lazy" alt="Taller de alimentación realizado presencial en el jardin agronomitos">
             <p class="col-12 col-xl-6 textosTalleres">La educación alimentaria es fundamental para tener una vida saludable y aprender a mejorar diferentes aspectos de la alimentación. Por eso, considero fundamental la realizacion de talleres educativos para poder adquirir nuevos conocimientos relacionados con una buena nutrición y comenzar de a poco a introducirse en este cambio hacia una vida mejor y mas saludable. </p>    
         </section>
 
@@ -59,7 +59,7 @@
 
         <h2 class="titulos">Talleres virtuales</h2>
         <section class="row d-flex justify-content-evenly talleresFotoDerecha">
-            <img class="col-12 col-lg-6 img-fluid imgTalleres2" loading="lazy" src="Imagenes/Imagen-taller-virtual.jpeg" alt="Taller realizado de forma virtual para las cocineras del jardin agronomitos">
+            <img class="col-12 col-xl-6 img-fluid imgTalleres2" loading="lazy" src="Imagenes/Imagen-taller-virtual.jpeg" alt="Taller realizado de forma virtual para las cocineras del jardin agronomitos">
             <p class="col-12 col-xl-6 textosTalleres"> Si bien la pandemia trajo aparejado muchos momentos desafortunados, debemos destacar la posibilidad que nos dio de aprovechar al máximo las redes sociales. <br> La educación en formato virtual fue una excelente herramienta para seguir aprendiendo a la distancia. <br> Desde mi parte, me resultó una estrategia excelente para seguir en contacto con mis pacientes y también para realizar actividades educativas como los talleres. <br>Esto nos brinda facilidades a todos y cada uno de nosotros que únicamente con tener acceso a una pantalla, podemos estar conectados desde distintas partes del mundo y al mismo tiempo compartir espacios educativos. </p>
         </section>
 
