--- a/antropometrias.html
+++ b/antropometrias.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Las antropometrías son un complemento ideal para los nutricionistas ya que con ellas, podemos determinar la composición corporal de las personas y saber como esta formado realmente su peso">
     <meta name="keywords" content="mediciones, composicion corporal, balanza, herramientas, pliegues, masa muscular, masa grasa, musculo, grasa, esqueleto, peso">
     <title>NUTRICION JG: Mejorá tu alimentación</title>
-    <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagenes/Logo-JG-Nutricion.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="SASS/main.css">
     <script src="https://kit.fontawesome.com/a31a6b2861.js" crossorigin="anonymous"></script>
