--- a/como-trabajo.html
+++ b/como-trabajo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">    
     <title>NUTRICION JG: Mejorá tu alimentación</title><meta name="description" content="Las recetas de esta pagina garantizan una alimentación adecuada, ayudan a las personas a lograr tener mayor variedad de su nutrición y poder tener diferentes opciones saludables para cocinar todos los días">
     <meta name="keywords" content="comidas saludables, alimentacion saludable, alimentos ricos, alimentacion balanceada, comidas ricas, menu saludable, nutricion, nutricionista, comida real">
-    <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagenes/Logo-JG-Nutricion.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="SASS/main.css">
     <script src="https://kit.fontawesome.com/a31a6b2861.js" crossorigin="anonymous"></script>
