--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Mejorá tu alimentación a través del desarrollo de hábitos saludables y sostenibles en el tiempo. Mi unico objetivo es ayudarte a lograr tus metas y acompañarte a lo largo de todo el proceso. Atiendo online, presencial y a domicilio realizando planes alimentarios, antropometrias, talleres de educacion alimentaria y más. Empezá hoy con el cambio que te mereces.">
     <meta name="keywords" content="Nutricion, nutricionista, alimentacion saludable, comida, calidad de vida, planes de alimentacion, personalizado, antropometria, talleres de alimentacion, consultorio, a domicilio, presencial, online, virtual, salud,alimentos">
     <title>NUTRICION JG: Mejorá tu alimentación</title>
-    <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagenes/Logo-JG-Nutricion.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="SASS/main.css">
     <script src="https://kit.fontawesome.com/a31a6b2861.js" crossorigin="anonymous"></script>
