--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Los planes de alimentación son adaptados a cada persona en específico, siendo 100% personalizados y realizados para mejorar la alimentación de la persona, adquirir hábitos saludables para toda la vida y a la vez cumplir sus objetivos.">
     <meta name="keywords" content="Nutricion, nutricionista, alimentacion saludable, comida, planes de alimentacion, plan personalizado, dieta, nutricion deportiva, nutricion vegetariana, aumento de peso, descenso de peso, bajar grasa, masa muscular, a domicilio, consultorio, presencial, online">
     <title>NUTRICION JG: Mejorá tu alimentación</title>
-    <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagenes/Logo-JG-Nutricion.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="SASS/main.css">
     <script src="https://kit.fontawesome.com/a31a6b2861.js" crossorigin="anonymous"></script>
