--- a/reserva-tu-turno.html
+++ b/reserva-tu-turno.html
@@ -7,7 +7,7 @@
     <meta name="description" content="El formulario de contacto es el punto fundamental para comenzar el cambio de la alimentación y emprender el camino de una vida mas saludable. Se puede elegir la modalidad (Online, presencial y a domicilio), el servicio, la fecha y el horario">
     <meta name="keywords" content="Nutricion, nutricionista, alimentacion saludable, comida, calidad de vida, planes de alimentacion, personalizado, antropometria, talleres de alimentacion, consultorio, a domicilio, presencial, online, virtual, salud, reserva tu turno, empeza el cambio, salud">
     <title>NUTRICION JG: Mejorá tu alimentación</title>
-    <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagenes/Logo-JG-Nutricion.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="SASS/main.css">
     <script src="https://kit.fontawesome.com/a31a6b2861.js" crossorigin="anonymous"></script>
