--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Soy una persona super ambiciosa y llena de interrogantes relacionados a la alimentación. Por eso decidí estudiar la licenciatura en nutrición. Me especialice en nutrición pediatrica aunque me encantan muchas otras areas de la nutrición como la clínica, consultorio, deportiva, etc">
     <meta name="keywords" content="Nutricion, nutricionista, alimentacion saludable, comida, nutricion pediatrica, nutricion infantil, planes de alimentacion,cemic, facultad, garrahan, consultorio, a domicilio, presencial, online, virtual, salud, alimentos">
     <title>NUTRICION JG: Mejorá tu alimentación</title>
-    <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagenes/Logo-JG-Nutricion.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="SASS/main.css">
     <script src="https://kit.fontawesome.com/a31a6b2861.js" crossorigin="anonymous"></script>
