--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Los talleres de educación alimentaria son fundamentales para que las personas tomen conciencia de su nutrición y comprendan como mejorarla, buscando alternativas más saludables. Trabajo con empresas, colegios, clubes y cualquier organización similar interesada en la nutrición de sus integrantes">
     <meta name="keywords" content="Alimentacion saludable, talleres educativos, enseñar a comer, comer mejor, clubes, clegios, empresas, nutricion, online, presencial, calidad de vida">
     <title>NUTRICION JG: Mejorá tu alimentación</title>
-    <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagenes/Logo-JG-Nutricion.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="SASS/main.css">
     <script src="https://kit.fontawesome.com/a31a6b2861.js" crossorigin="anonymous"></script>
@@ -143,7 +143,7 @@
         <h4 class="titulos">Otros Servicios:</h4>
         <section class="container-fluid otrosServicios">
             <div class="row otrosServiciosCaja">
-                <div class="col-12 col-lg-6 d-flex justify-content-center">
+                <div class="col-12 col-md-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="planes-de-alimentación.html">
                             <img src="Imagenes/Planes-de-alimentacion.jpg" loading="lazy" alt="Servicio de plan de alimentación" class="imgServicios">
@@ -154,7 +154,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 d-flex justify-content-center">
+                <div class="col-12 col-md-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="antropometrias.html">   
                             <img src="Imagenes/antro-index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
