Pase el index por el validador de html e hice los cambios

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav d-flex justify-content-evenly linksNavegacion">
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="sobre-mi.html">Sobre mi</a>
+                            <a id="ancorNav1" class="nav-link" href="sobre-mi.html">Sobre mi</a>
                         </li>
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="index.html#serviciosPaginaInicio">Servicios</a>
+                            <a id="ancorNav2" class="nav-link" href="index.html#serviciosPaginaInicio">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="reserva-tu-turno.html">Reserva tu turno</a>
+                            <a id="ancorNav3" class="nav-link" href="reserva-tu-turno.html">Reserva tu turno</a>
                         </li>
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="como-trabajo.html">¿Cómo trabajo?</a>
+                            <a id="ancorNav4" class="nav-link" href="como-trabajo.html">¿Cómo trabajo?</a>
                         </li>
                     </ul>
                 </div>
@@ -211,7 +211,7 @@
         <section class="container p-4">
             <h5>Encontrame en mis redes sociales:</h5>
             <div>
-                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de" role="button"> 
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://wa.me/+5491124028206?text=Hola%20Juliana!%20Quería%20más%20información%20acerca%20de" role="button"> 
                     <i title="Icono de whatsapp" class="fab fa-whatsapp"></i>
                 </a>
                 <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.instagram.com/nutricion.jg/" role="button">  
@@ -220,7 +220,7 @@
                 <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.facebook.com/Nutrici%C3%B3njg-113083484374716/?ref=py_c" role="button">
                     <i title="Icono de facebook" class="fab fa-facebook-f"></i>
                 </a>
-                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="mailto:licjulianagimenez@gmail.com?subject=Quiero más información&body=Hola Juliana! Quería más información acerca de " role="button">
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="mailto:licjulianagimenez@gmail.com?subject=Quiero%20más%20información&body=Hola%20Juliana!%20Quería%20más%20información%20acerca%20de" role="button">
                     <i title="Icono de mail" class="far fa-envelope"></i>
                 </a>
                 <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.linkedin.com/in/juliana-gimenez-9651a5196/?originalSubdomain=ar" role="button">
@@ -256,11 +256,9 @@
                                         </div>
                                         <div class="modal-footer d-flex justify-content-center">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                                            <button type="button" class="btn botonModalWhatsapp">
-                                                <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería suscribirme a los mails de descuentos y beneficios. Mi mail es: ">
-                                                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
-                                                </a>
-                                            </button>
+                                            <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text=Hola%20Juliana!%20Quería%20suscribirme%20a%20los%20mails%20de%20descuentos%20y%20beneficios.%20Mi%20mail%20es:">
+                                                <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -272,7 +270,7 @@
             <div class="text-center">
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
-                <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
+                <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text=Hola%20Juliana!%20Quería%20más%20información%20acerca%20de">
                     <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
