--- a/antropometrias.html
+++ b/antropometrias.html
@@ -47,12 +47,11 @@
 
 <!--Principio de la pagina -->
 
-    <main class="container-fluid">
-        <h1 class="tituloAntropometria"> Antropometrías</h1>
+<main class="container-fluid">
         <section class="row d-flex justify-content-evenly antroFotoIzquierda">
+        <h1 class="tituloAntropometria"> Antropometrías</h1>
             <img class="col-12 col-xl-6 img-fluid fotoAntro" loading="lazy" src="Imagenes/Foto-1-antro.jpg" alt="Foto principal de la pagina de antropometrias">
-            <p class="col-12 col-xl-6 textosAntro">La antropometría consiste en una serie de mediciones a partir de la cual podemos conocer con más especificidad, como es la composición corporal de cada individuo. <br> Esta herramienta es un excelente complemento a la balanza ya que nos permite saber realmente de que está conformado nuestro peso. <br>Gracias a la antropometría vamos a conocer dos variables: <strong> Las modificables </strong> (Con una buena alimentación y entrenamiento): MASA MUSCULAR y MASA GRASA y <strong>las no modificables: </strong> MASA OSEA (esqueleto), PIEL y MASA RESIDUAL (Órganos y vísceras)
-                </p>    
+            <p class="col-12 col-xl-6 textosAntro">La antropometría consiste en una serie de mediciones a partir de la cual podemos conocer con más especificidad, como es la composición corporal de cada individuo. <br> Esta herramienta es un excelente complemento a la balanza ya que nos permite saber realmente de que está conformado nuestro peso. <br>Gracias a la antropometría vamos a conocer dos variables: <strong> Las modificables </strong> (Con una buena alimentación y entrenamiento): MASA MUSCULAR y MASA GRASA y <strong>las no modificables: </strong> MASA OSEA (esqueleto), PIEL y MASA RESIDUAL (Órganos y vísceras)</p>    
         </section>
 
 <!-- Masa adiposa-->
@@ -78,8 +77,8 @@
 
 <!-- RESERVA TU TURNO -->
 
-        <h2 class="titulos"> Empezá hoy el cambio, reserva tu turno</h2>
         <section class="row d-flex justify-content-evenly contenedorReservas">
+            <h2 class="titulos"> Empezá hoy el cambio, reserva tu turno</h2>
             <div class="col-12 col-lg-6 cajaReservas">
                 <form action="archivo.php" method="POST" class="reservas">
                     <label for="Nombre"> Nombre: </label>
@@ -124,11 +123,9 @@
                                 </div>
                                 <div class="modal-footer d-flex justify-content-center">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                                    <button type="button" class="btn botonModalWhatsapp">
-                                        <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería pedir un turno de ">
+                                        <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text=Hola%20Juliana!%20Quería%20pedir%20un%20turno%20de">
                                             <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                         </a>
-                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -137,7 +134,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <h3 class="titulos h3Consultorio">Consultorio:</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9966672702735!2d-58.53884279797884!3d-34.57895088139242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb776c10a751f%3A0xdb2ac8a876043fa1!2sBelgrano%203953%2C%20San%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1633394813154!5m2!1ses-419!2sar"style="border:0;" allowfullscreen="" loading="lazy" class="mapaConsultorio2">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9966672702735!2d-58.53884279797884!3d-34.57895088139242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb776c10a751f%3A0xdb2ac8a876043fa1!2sBelgrano%203953%2C%20San%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1633394813154!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" class="mapaConsultorio2">
                 </iframe>       
                 <p class="textoMapa"> <strong>Dirección: </strong>Belgrano 3953 (Localidad de San Martin) <br><br> <strong> Colectivos: </strong> 57, 78, 87, 161, 169, 176 <br><br> <strong>Trenes:</strong> A menos de 10 cuadras del Ferrocarril General Bartolomé Mitre (FCGBM) 
                 </p>
@@ -146,8 +143,8 @@
 
 
 <!--Otros servicios-->
-        <h4 class="titulos">Otros Servicios:</h4>
         <section class="container-fluid otrosServicios">
+            <h4 class="titulos">Otros Servicios:</h4>
             <div class="row otrosServiciosCaja">
                 <div class="col-12 col-md-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
