pase como trabajo x validador

--- a/como-trabajo.html
+++ b/como-trabajo.html
@@ -44,18 +44,20 @@
         </nav>
     </header>
     <main>
-        <a name="atencionOnline"></a>
+        <a id="atencionOnline"></a>
         <h1 class="tituloComoTrabajo">¿Cómo trabajo?</h1>
         <section>
             <h2 class="titulos">Atención online</h2>
             <div class="row d-flex justify-content-evenly comoTrabajoParteIzquierda">
+                <a id="atencionDomicilio"></a>
                 <img src="Imagenes/online-index.jpg" loading="lazy" alt="Servicio de Consultas Online" class="fotoAtencionOnline">
                 <p class="col-12 col-xl-6 textosComoTrabajo">La tecnología nos permite mantenernos cerca a pesar de encontrarnos a miles de kilómetros de distancia. Si hacer coincidir tu rutina con el turno presencial se vuelve un caos, tenés que saber que la alternativa online siempre esta presente. De esta forma podrás conectarte desde tu casa, el trabajo, vacaciones, etc y poder seguir cuidando tu alimentación estes donde estes.</p>
             </div>
         </section>
-        <section id="atencionDomicilio">
+        <section>
             <h2 class="titulos">Atención a domicilio</h2>
             <div class="row d-flex justify-content-evenly comoTrabajoParteDerecha">
+                <a id="otrosBeneficiosConsultas"></a>
                 <img src="Imagenes/domicilio-index.jpg" loading="lazy" alt="Servicio de atención a domicilio" class="fotoAtencionDomicilio">
                 <p class="col-12 col-xl-6 textosComoTrabajo"> La opción de atención a domicilio surge de la necesidad de poder ayudar a todos aquellos que no tienen la posibilidad de acudir al consultorio, presentándoles la alternativa de acercarme a sus hogares. <br> Estos encuentros nos permitirán conocernos, hacer una anamnesis completa y crear un plan de alimentación 100% adecuado a cada paciente. Quienes lo deseen, también podrán realizarse mediciones antropométricas.</p>
             </div>
@@ -124,11 +126,9 @@
                                 </div>
                                 <div class="modal-footer d-flex justify-content-center">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                                    <button type="button" class="btn botonModalWhatsapp">
-                                        <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería pedir un turno de ">
-                                            <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
-                                        </a>
-                                    </button>
+                                    <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text=Hola%20Juliana!%20Quería%20pedir%20un%20turno%20de">
+                                        <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -137,7 +137,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <h3 class="titulos h3Consultorio">Consultorio:</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9966672702735!2d-58.53884279797884!3d-34.57895088139242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb776c10a751f%3A0xdb2ac8a876043fa1!2sBelgrano%203953%2C%20San%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1633394813154!5m2!1ses-419!2sar"style="border:0;" allowfullscreen="" loading="lazy" class="mapaConsultorio2">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9966672702735!2d-58.53884279797884!3d-34.57895088139242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb776c10a751f%3A0xdb2ac8a876043fa1!2sBelgrano%203953%2C%20San%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1633394813154!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" class="mapaConsultorio2">
                 </iframe>       
                 <p class="textoMapa"> <strong>Dirección: </strong>Belgrano 3953 (Localidad de San Martin) <br><br> <strong> Colectivos: </strong> 57, 78, 87, 161, 169, 176 <br><br> <strong>Trenes:</strong> A menos de 10 cuadras del Ferrocarril General Bartolomé Mitre (FCGBM) 
                 </p>
