--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <div class="contenedorServicios">
-                        <a href="como-trabajo.html">
+                        <a href="como-trabajo.html#otrosBeneficiosConsultas">
                         <img src="Imagenes/foto-compu-mano.jpg" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Otros beneficios</p>
