pase x validador planes de alimenacion

--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -49,16 +49,16 @@
 <!--Principio de la pagina -->
 
     <main class="container-fluid">
-        <h1 class="titPlanes"> Planes de alimentación</h1>
         <section class="row d-flex justify-content-evenly planesSeccion1">
+            <h1 class="titPlanes"> Planes de alimentación</h1>
             <img class="col-12 col-xl-6 img-fluid juliAtendiendo" loading="lazy" src="Imagenes/atencion-en-consultorio.jpg" alt="Nutricionista atendiendo en consultorio realizando educacion alimentaria">
             <p class="col-12 col-xl-6 textosPlanes">Los planes de alimentación son adaptados a cada persona según los objetivos que tiene, sus gustos, hábitos, rutina diaria, problemas de salud y mucho más. También se tiene en cuenta el tipo de trabajo, actividad física realizada y actividades extras. <br>La primera consulta nos servirá para conocernos en profundidad y, principalmente, conocer tus gustos alimentarios. Esto me permitirá diseñar un plan de alimentación flexible y adaptado a tu rutina. A lo largo de las consultas vamos a ir trabajando juntos, mejorando paulatinamente la calidad de la alimentación, acercándonos cada vez más a cumplir los objetivos que nos vayamos planteando y formando hábitos para toda la vida. <br>¡Animate a mejorar tu alimentación, aprender sobre la mejor manera de nutrir tu cuerpo y cambiar tu vida!</p>    
         </section>
 
 <!-- Tipos de planes de alimentacion-->
 
-        <h2 class="titulos"> Tipos de planes alimentarios:</h2>
         <section class="listaDePlanes">
+            <h2 class="titulos"> Tipos de planes alimentarios:</h2>
             <ul>
                 <li>Planes de descenso de peso</li>
                 <li>Planes de aumento de masa muscular</li>
@@ -70,26 +70,26 @@
 
 <!-- Planes con foto y texto explicativo de cada uno-->
 
-        <h3 class="titulos">Planes para deportistas</h3>
         <section class="row d-flex justify-content-evenly planesSeccion2">
+            <h3 class="titulos">Planes para deportistas</h3>
             <img class="col-12 col-xl-6 img-fluid planesImg2" loading="lazy" src="Imagenes/nutricion-deportiva.jpg" alt="Foto de nutricion en el deporte">
             <p class="col-12 col-xl-6 textosPlanes">Para ser los mejores en las diferentes disciplinas es de vital importancia cuidar la alimentación. La nutrición deportiva es fundamental para lograr potenciar el rendimiento al máximo y poder lograr los mejores resultados tanto en los entrenamientos como en las competencias. <br> Es importante tener en cuenta que la alimentación del deportista suele requerir mayor cantidad de necesidades energéticas y precisa hacer hincapié en asuntos como hidratación, recuperación, entre muchos otros. <br>Sin dudas, te recomiendo que comiences con un plan de alimentación 100% personalizado a tu rutina para superar tu rendimiento actual y progresar en tu disciplina. </p>
         </section>
-        <h3 class="titulos">Planes vegetarianos/veganos</h3>
         <section class="row d-flex justify-content-evenly planesSeccion3"> 
+            <h3 class="titulos">Planes vegetarianos/veganos</h3>
             <img class="col-12 col-xl-6 img-fluid planesImg3" loading="lazy" src="Imagenes/vegetariana-1.jpg" alt="Foto de alimentación vegetariana/vegana">
             <p class="col-12 col-xl-6 textosPlanes">Ya sea por motivos religiosos, culturales, personales, o de cualquier tipo, la alimentación vegetariana y la vegana son muy buenas opciones para todos nosotros. <br>¿Se pueden llevar a cabo este tipo de alimentaciones de forma saludable? <br> POR SUPUESTO QUE SI! Juntos vamos a trabajar para lograr una alimentación super variada, divertida y sobre todo COMPLETA, aportando todos los nutrientes que necesitamos para estar sanos. </p>
         </section>    
-        <h3 class="titulos">Planes de alimentación en el embarazo</h3>
         <section class="row d-flex justify-content-evenly planesSeccion4"> 
+            <h3 class="titulos">Planes de alimentación en el embarazo</h3>
             <img class="col-12 col-xl-6 img-fluid planesImg4" loading="lazy" src="Imagenes/Embarazo.jpg" alt="Foto de alimentación en embarazadas">
             <p class="col-12 col-xl-6 textosPlanes"> Durante esta importante etapa de la vida, las mujeres debemos procurar cuidar nuestra alimentación ya que aumentan los requerimientos de muchos nutrientes y tenemos que poner un especial foco en la nutrición. <br> Juntas vamos a trabajar sobre la alimentación para garantizar un embarazo cuidado, saludable, contemplando siempre tus necesidades, tus hábitos y preferencias. <br>Es importante recordar que, a partir de ahora, no solo estas nutriendo tu cuerpo si no también el de tu bebé. El desarrollo cognitivo e intelectual del bebé se verá afectado (positiva o negativamente) considerando tu manera de nutrirte. Esto también contempla la etapa de lactancia materna. ¡El momento de empezar es hoy!</p>
         </section>
         
 <!-- RESERVA TU TURNO -->
 
-        <h3 class="titulos"> Empezá hoy el cambio, reserva tu turno</h3>
         <section class="row d-flex justify-content-evenly contenedorReservas">
+            <h3 class="titulos"> Empezá hoy el cambio, reserva tu turno</h3>
             <div class="col-12 col-lg-6 cajaReservas">
                 <form action="archivo.php" method="POST" class="reservas">
                     <label for="Nombre"> Nombre: </label>
@@ -134,11 +134,9 @@
                                 </div>
                                 <div class="modal-footer d-flex justify-content-center">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                                    <button type="button" class="btn botonModalWhatsapp">
-                                        <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería pedir un turno de ">
-                                            <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
-                                        </a>
-                                    </button>
+                                    <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text=Hola%20Juliana!%20Quería%20pedir%20un%20turno%20de">
+                                        <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -147,7 +145,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <h3 class="titulos h3Consultorio">Consultorio:</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9966672702735!2d-58.53884279797884!3d-34.57895088139242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb776c10a751f%3A0xdb2ac8a876043fa1!2sBelgrano%203953%2C%20San%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1633394813154!5m2!1ses-419!2sar"style="border:0;" allowfullscreen="" loading="lazy" class="mapaConsultorio2">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9966672702735!2d-58.53884279797884!3d-34.57895088139242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb776c10a751f%3A0xdb2ac8a876043fa1!2sBelgrano%203953%2C%20San%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1633394813154!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" class="mapaConsultorio2">
                 </iframe>       
                 <p class="textoMapa"> <strong>Dirección: </strong>Belgrano 3953 (Localidad de San Martin) <br><br> <strong> Colectivos: </strong> 57, 78, 87, 161, 169, 176 <br><br> <strong>Trenes:</strong> A menos de 10 cuadras del Ferrocarril General Bartolomé Mitre (FCGBM) 
                 </p>
@@ -156,8 +154,8 @@
 
 <!--Otros servicios-->
 
-        <h4 class="titulos">Otros Servicios:</h4>
         <section class="container-fluid otrosServicios">
+            <h4 class="titulos">Otros Servicios:</h4>
             <div class="row otrosServiciosCaja">
                 <div class="col-12 col-md-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
