validador talleres de alimentacion

--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -49,31 +49,31 @@
 <!--Principio de la pagina -->
 
     <main>
-        <h1 class="tituloTalleres"> Talleres de alimentación</h1>
         <section class="row d-flex justify-content-evenly talleresFotoIzquierda">
+            <h1 class="tituloTalleres"> Talleres de alimentación</h1>
             <img class="col-12 col-xl-6 img-fluid imgTalleres1" src="Imagenes/Foto-taller-de-alimentacion.jpeg" loading="lazy" alt="Taller de alimentación realizado presencial en el jardin agronomitos">
             <p class="col-12 col-xl-6 textosTalleres">La educación alimentaria es fundamental para tener una vida saludable y aprender a mejorar diferentes aspectos de la alimentación. Por eso, considero fundamental la realizacion de talleres educativos para poder adquirir nuevos conocimientos relacionados con una buena nutrición y comenzar de a poco a introducirse en este cambio hacia una vida mejor y mas saludable. </p>    
         </section>
 
 <!-- Taller virtual-->
 
-        <h2 class="titulos">Talleres virtuales</h2>
         <section class="row d-flex justify-content-evenly talleresFotoDerecha">
+            <h2 class="titulos">Talleres virtuales</h2>
             <img class="col-12 col-xl-6 img-fluid imgTalleres2" loading="lazy" src="Imagenes/Imagen-taller-virtual.jpeg" alt="Taller realizado de forma virtual para las cocineras del jardin agronomitos">
             <p class="col-12 col-xl-6 textosTalleres"> Si bien la pandemia trajo aparejado muchos momentos desafortunados, debemos destacar la posibilidad que nos dio de aprovechar al máximo las redes sociales. <br> La educación en formato virtual fue una excelente herramienta para seguir aprendiendo a la distancia. <br> Desde mi parte, me resultó una estrategia excelente para seguir en contacto con mis pacientes y también para realizar actividades educativas como los talleres. <br>Esto nos brinda facilidades a todos y cada uno de nosotros que únicamente con tener acceso a una pantalla, podemos estar conectados desde distintas partes del mundo y al mismo tiempo compartir espacios educativos. </p>
         </section>
 
 <!-- Taller presencial-->
-        <h2 class="titulos">Taller presencial </h2>
         <section class="row d-flex justify-content-evenly talleresFotoIzquierda">
+            <h2 class="titulos">Taller presencial </h2>
             <img class="col-12 col-lg-6 img-fluid imgTalleres3" loading="lazy" src="Imagenes/Talleres-alimentacion.jpg" alt="Foto de un taller educativo con niños">
             <p class="col-12 col-xl-6 textosTalleres"> Los talleres de alimentación presenciales se llevan a cabo en toda institucion (clubes, colegios, empresas, etc.) que quiera abordar de manera mas saludable la alimentación de sus integrantes. En ellos, abordamos diferentes tematicas segun los diferentes aspectos de la nutrición que se quieran profundizar como alimentación saludable, nutrición deportiva, alimentación en los primeros años de vida, alimentación para los adultos mayores, etc. .</p>
         </section>
 
 <!-- RESERVA TU TURNO -->
 
-        <h3 class="titulos"> Empezá hoy el cambio, reserva tu turno</h3>
         <section class="row d-flex justify-content-evenly contenedorReservas">
+            <h3 class="titulos"> Empezá hoy el cambio, reserva tu turno</h3>
             <div class="col-12 col-lg-6 cajaReservas">
                 <form action="archivo.php" method="POST" class="reservas">
                     <label for="Nombre"> Nombre: </label>
@@ -118,11 +118,9 @@
                                 </div>
                                 <div class="modal-footer d-flex justify-content-center">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                                    <button type="button" class="btn botonModalWhatsapp">
-                                        <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería pedir un turno de ">
-                                            <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
-                                        </a>
-                                    </button>
+                                    <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text=Hola%20Juliana!%20Quería%20pedir%20un%20turno%20de">
+                                        <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +129,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <h3 class="titulos h3Consultorio">Consultorio:</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9966672702735!2d-58.53884279797884!3d-34.57895088139242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb776c10a751f%3A0xdb2ac8a876043fa1!2sBelgrano%203953%2C%20San%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1633394813154!5m2!1ses-419!2sar"style="border:0;" allowfullscreen="" loading="lazy" class="mapaConsultorio2">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9966672702735!2d-58.53884279797884!3d-34.57895088139242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb776c10a751f%3A0xdb2ac8a876043fa1!2sBelgrano%203953%2C%20San%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1633394813154!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" class="mapaConsultorio2">
                 </iframe>       
                 <p class="textoMapa"> <strong>Dirección: </strong>Belgrano 3953 (Localidad de San Martin) <br><br> <strong> Colectivos: </strong> 57, 78, 87, 161, 169, 176 <br><br> <strong>Trenes:</strong> A menos de 10 cuadras del Ferrocarril General Bartolomé Mitre (FCGBM) 
                 </p>
@@ -140,8 +138,8 @@
 
 <!--Otros servicios-->
 
-        <h4 class="titulos">Otros Servicios:</h4>
         <section class="container-fluid otrosServicios">
+            <h4 class="titulos">Otros Servicios:</h4>
             <div class="row otrosServiciosCaja">
                 <div class="col-12 col-md-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
