--- a/como-trabajo.html
+++ b/como-trabajo.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">    
-    <title>NUTRICION JG: Mejorá tu alimentación</title><meta name="description" content="Las recetas de esta pagina garantizan una alimentación adecuada, ayudan a las personas a lograr tener mayor variedad de su nutrición y poder tener diferentes opciones saludables para cocinar todos los días">
-    <meta name="keywords" content="comidas saludables, alimentacion saludable, alimentos ricos, alimentacion balanceada, comidas ricas, menu saludable, nutricion, nutricionista, comida real">
+    <title>NUTRICION JG: Mejorá tu alimentación</title><meta name="description" content="Trabajar con diferentes modalidades aparte del consultorio como puede ser online y a domicilio facilita a los pacientes para tomar su turno. Aparte de esto, ofrezco otros beneficios y comodidades como planes 100% personalizados, seguimieto permanente por whatsapp, recetarios gratis, amplia disponibilidad horaria, etc">
+    <meta name="keywords" content="beneficios, atencion online, atencion a domicilio, recetario, horarios, consultas, reservar turno, disponibilidad horaria, whatsapp, seguimiento, plan personalizado, plan de alimentacion, dieta, perder peso">
     <link rel="shortcut icon" href="Imagenes/Logo-JG-Nutricion.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="SASS/main.css">
