No se ve la imagen de antro. prueba

--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -155,7 +155,7 @@
                 <div class="col-12 col-md-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="antropometrias.html">   
-                            <img src="Imagenes/antro-index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
+                            <img src="Imagenes/antro-index.jpg" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Antropometrías</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
